--- a/index.html
+++ b/index.html
@@ -347,7 +347,53 @@ function closeGame() {
 }
 
 document.addEventListener('DOMContentLoaded', initGame);
+
+//pra mobile
+function initMobileControls() {
+    const leftBtn = document.getElementById('leftBtn');
+    const rightBtn = document.getElementById('rightBtn');
+    const shootBtn = document.getElementById('shootBtn');
+
+    leftBtn.addEventListener('touchstart', (e) => {
+        e.preventDefault();
+        keys['ArrowLeft'] = true;
+    });
+    leftBtn.addEventListener('touchend', (e) => {
+        e.preventDefault();
+        keys['ArrowLeft'] = false;
+    });
+
+    rightBtn.addEventListener('touchstart', (e) => {
+        e.preventDefault();
+        keys['ArrowRight'] = true;
+    });
+    rightBtn.addEventListener('touchend', (e) => {
+        e.preventDefault();
+        keys['ArrowRight'] = false;
+    });
+
+    shootBtn.addEventListener('touchstart', (e) => {
+        e.preventDefault();
+        if (gameRunning) {
+            bullets.push(new Bullet(player.x + player.width / 2 - 2, player.y));
+        }
+    });
+}
+
+document.addEventListener('DOMContentLoaded', () => {
+    initGame();
+    initMobileControls();
+});
 </script>
+
+<!--pra mobile -->
+<div class="mobile-controls" id="mobileControls">
+    <div class="move-controls">
+        <button class="control-btn" id="leftBtn">←</button>
+        <button class="control-btn" id="rightBtn">→</button>
+    </div>
+    <button class="control-btn shoot-btn" id="shootBtn">🚀</button>
+</div>
     <main>
         <section id="home" class="hero">
             <div class="container">
